# fast-api-lms

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 00107eac4b76_moving_is_active_to_user_table.py  100d8ab94699_first_migration.py  14b34aba644a_.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: course.py  user.py
