[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["waruingugi <warui***@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_lms"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
