[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["waruingugi <warui***@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_lms"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
email-validator = "^1.3.0"
sqlalchemy = "^1.4.45"
psycopg2-binary = "^2.9.5"
sqlalchemy-utils = "^0.39.0"
alembic = "^1.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
