[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = ""
authors = ["waruingugi <warui***@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_lms"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.20.0"
fastapi = "^0.88.0"
pydantic = "^1.10.2"
email-validator = "^1.3.0"
sqlalchemy = "^1.4.45"
psycopg2-binary = "^2.9.5"
sqlalchemy-utils = "^0.39.0"
alembic = "^1.9.1"
asyncpg = "^0.27.0"
flake8 = "^6.0.0"
black = "^22.12.0"
pre-commit = "^2.21.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 79
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''
